// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input.Search > should support custom Button 1`] = `
<div
  class="ant-space-compact ant-input-search css-var-root ant-input-search-with-button"
>
  <input
    class="ant-input ant-input-outlined css-var-root ant-input-css-var ant-input-compact-item ant-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-compact-item ant-btn-compact-last-item ant-input-search-btn"
    type="button"
  >
    <span>
      ok
    </span>
  </button>
</div>
`;

exports[`Input.Search > should support custom button 1`] = `
<div
  class="ant-space-compact ant-input-search css-var-root ant-input-search-with-button"
>
  <input
    class="ant-input ant-input-outlined css-var-root ant-input-css-var ant-input-compact-item ant-input-compact-first-item"
    type="search"
    value=""
  />
  <button
    type="button"
  >
    ok
  </button>
</div>
`;
